--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,3 @@
 TWILIO_ACCOUNT_SID= AC54afd6a8eac9492e494626df3dfaad06
-TWILIO_API_KEY_SID=
-TWILIO_API_KEY_SECRET=
+TWILIO_API_KEY_SID= SK19f8625f5cbe2b020cc39183cd3345ae
+TWILIO_API_KEY_SECRET= Bh0An89nm5zWYbQ6c0yqwpxaoV96nVAx
